<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".CourseEditor"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <DatePicker
            android:id="@+id/date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:visibility="invisible" />

        <Button
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/default_margin"
            android:text="@android:string/ok"
            android:visibility="invisible" />

        <RelativeLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/titleEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:ems="10"
                android:textSize="@dimen/larger_text"
                android:inputType="text"
                android:hint="@string/enter_course_title" />
            <Button
                android:id="@+id/start_date_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/titleEdit"
                android:onClick="setDate"
                android:text="@string/start_date"
                android:textSize="@dimen/normal_text"/>
            <TextView
                android:id="@+id/start_date_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/start_date_button"
                android:layout_alignBottom="@id/start_date_button"
                android:textSize="@dimen/normal_text"
                android:text="@string/start_date_displays_here"
                />
            <Button
                android:id="@+id/end_date_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/start_date_button"
                android:onClick="setDate"
                android:text="@string/end_date"
                android:textSize="@dimen/normal_text"/>
            <TextView
                android:id="@+id/end_date_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/end_date_button"
                android:layout_toEndOf="@id/end_date_button"
                android:textSize="@dimen/normal_text"
                android:text="@string/end_date_displays_here"
                />

            <TextView
                android:id="@+id/status_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/end_date_button"
                android:text="@string/status"
                android:textSize="@dimen/normal_text"
                />

            <Spinner
                android:id="@+id/status_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/status_display"
                android:layout_toEndOf="@id/status_display"
                />

            <CheckBox
                android:id="@+id/alarm_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/status_display"
                android:text="@string/set_alarms"
                />

            <EditText
                android:id="@+id/mentor_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/normal_text"
                android:hint="@string/enter_mentor_name"
                android:inputType="textPersonName"
                android:layout_below="@id/alarm_checkbox"
                />

            <EditText
                android:id="@+id/mentor_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/normal_text"
                android:hint="@string/enter_mentor_phone"
                android:inputType="phone"
                android:layout_below="@id/mentor_name"
                />

            <EditText
                android:id="@+id/mentor_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/normal_text"
                android:hint="@string/enter_mentor_email"
                android:inputType="textEmailAddress"
                android:layout_below="@id/mentor_phone"
                />

            <EditText
                android:id="@+id/notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mentor_email"
                android:hint="@string/enter_note"
                android:inputType="textMultiLine|textCapSentences"
                />

            <Button
                android:id="@+id/course_assessment_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/notes"
                android:textSize="@dimen/normal_text"
                android:text="@string/assessments"
                android:layout_marginTop="@dimen/extra_margin"
                android:onClick="edit_assessments"
                />

            <Button
                android:id="@+id/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:onClick="delete"
                android:text="@string/delete_course"
                android:textSize="@dimen/normal_text"
                android:visibility="invisible"
                />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/email_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/cancel_button"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_margin="@dimen/default_margin"
                android:onClick="email"
                android:src="@drawable/ic_action_email" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="end|bottom"
                android:layout_margin="@dimen/default_margin"
                android:onClick="save"
                android:src="@drawable/ic_action_save" />


            <android.support.design.widget.FloatingActionButton
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/save_button"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_margin="@dimen/default_margin"
                android:onClick="cancel"
                android:src="@drawable/ic_action_cancel" />

        </RelativeLayout>


    </RelativeLayout>
</ScrollView>