<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".AssessmentEditor"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <DatePicker
            android:id="@+id/date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:visibility="invisible" />

        <Button
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/default_margin"
            android:text="@android:string/ok"
            android:visibility="invisible" />

        <RelativeLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/titleEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:ems="10"
                android:textSize="@dimen/larger_text"
                android:inputType="text"
                android:hint="@string/enter_assessment_name" />
            <Button
                android:id="@+id/end_date_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/titleEdit"
                android:onClick="setDate"
                android:text="@string/end_date"
                android:textSize="@dimen/normal_text"/>
            <TextView
                android:id="@+id/end_date_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/end_date_button"
                android:layout_toRightOf="@id/end_date_button"
                android:textSize="@dimen/normal_text"
                android:text="End date displays here"
                />

            <TextView
                android:id="@+id/type_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/end_date_button"
                android:text="Type"
                android:textSize="@dimen/normal_text"
                />

            <Spinner
                android:id="@+id/type_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/type_display"
                android:layout_toEndOf="@id/type_display"
                android:layout_toRightOf="@id/type_display"
                />

            <EditText
                android:id="@+id/notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/type_display"
                android:hint="@string/enter_note"
                android:inputType="textMultiLine|textCapSentences"
                />

            <Button
                android:id="@+id/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:onClick="delete"
                android:text="Delete assessment"
                android:textSize="@dimen/normal_text"
                android:visibility="invisible"
                />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="end|bottom"
                android:layout_margin="@dimen/default_margin"
                android:onClick="save"
                android:src="@drawable/ic_action_save" />


            <android.support.design.widget.FloatingActionButton
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/save_button"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_margin="@dimen/default_margin"
                android:onClick="cancel"
                android:src="@drawable/ic_action_cancel" />

        </RelativeLayout>


    </RelativeLayout>
</ScrollView>